[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawor"
version = "0.1.0"
description = "HaWoR: World-Space Hand Motion Reconstruction from Egocentric Videos"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "license.txt" }
authors = [
    { name = "Jinglei Zhang" },
    { name = "Jiankang Deng" },
    { name = "Chao Ma" },
    { name = "Rolandos Alexandros Potamias" },
]

# Intentionally no `dependencies` here: runtime requirements are managed
# manually via `requirements.txt` (and the extra torch / DROID-SLAM /
# Metric3D installation steps described in README.md). This keeps
# `pip install -e .` from touching any already-installed packages.

[project.urls]
Homepage = "https://hawor-project.github.io/"
Repository = "https://github.com/ThunderVVV/HaWoR"
Paper = "https://arxiv.org/abs/2501.02973"

[tool.setuptools.packages.find]
where = ["."]
include = ["hawor*", "lib*", "infiller*", "scripts*", "_DATA*"]
exclude = [
    "hot3d*",
    "thirdparty*",
    "assets*",
    "example*",
    "weights*",
    "datasets*",
    "build*",
    "dist*",
    "tests*",
]
namespaces = true

# Ship the MANO model files + mean-pose npz alongside the `_DATA` package
# so callers that `chdir` into the installed package root can resolve the
# relative paths used by `hawor.utils.process`,
# `infiller.hand_utils.process` and `lib.models.modules` -- namely
# `_DATA/data/mano_mean_params.npz`,
# `_DATA/data/mano/MANO_RIGHT.pkl` and
# `_DATA/data_left/mano_left/MANO_LEFT.pkl`.
[tool.setuptools.package-data]
"_DATA.data" = ["*.npz"]
"_DATA.data.mano" = ["*.pkl"]
"_DATA.data_left.mano_left" = ["*.pkl"]
